[package]
name = "gate-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.88"
serde_json = "1.0.140"
chrono = "0.4.41"
