[package]
name = "gate-rs"
version = "0.1.0"
edition = "2024"
authors = ["Mr Gaochen <wooyulan@gmail.com>"]
description = "gate rust sdk"
homepage = "https://github.com/mr-gaochen/gate-rs.git"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.88"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
reqwest = "0.12.19"
hmac-sha512 = "1.1.7"
hex = "0.4.3"
urlencoding = "2.1.3"
